Start fixing background-clip on Safari

--- a/sass/configuration/_config.scss
+++ b/sass/configuration/_config.scss
@@ -25,6 +25,3 @@ $color-small-lol-logo: #c28f2b;
 $color-link-header: #333333;
 
 $color-layer: #171717;
-
-// Dimension
-$max-width: 140rem;
