--- a/sass/main/_main-header.scss
+++ b/sass/main/_main-header.scss
@@ -1,29 +1,21 @@
-.arrow-down {
-  width: 1.5rem;
-  height: 1.5rem;
-  fill: $arrow-color;
-  margin-left: 0.2rem;
-}
-
 // Main
 .main-header {
-  grid-column: Full-start / Full-end;
-
-  background-color: $header-bg-color;
-  color: $header-text-color;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
   display: flex;
   justify-content: space-between;
   align-items: center;
+
+  width: 100%;
+  background-color: $header-bg-color;
+  color: $header-text-color;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.5);
+  z-index: 10;
+
   position: sticky;
   top: -1px;
   left: 0;
-  width: 100%;
-  z-index: 10;
 
   // Part 1
   &__riot-logo {
-    margin-left: 6rem;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,10 +23,6 @@
 
     &-svg {
       fill: $header-text-color;
-    }
-
-    &-svg,
-    .arrow-down-red {
       transition: all linear 0.2s;
     }
 
@@ -315,7 +303,6 @@
 
   // Part 3 ////////////////////////////////////////////////////
   &__play {
-    margin-right: 6rem;
     display: flex;
     align-items: center;
     justify-content: space-between;
