--- a/sass/subHeader/_sub-header.scss
+++ b/sass/subHeader/_sub-header.scss
@@ -18,7 +18,7 @@
       @include primary-background(1);
       background-clip: text;
       -webkit-background-clip: text;
-      color: transparent;
+      -webkit-text-fill-color: transparent;
       letter-spacing: 1rem;
 
       @include abs;
@@ -64,7 +64,7 @@
 
   &__img {
     width: 100%;
-    max-width: $max-width;
+    max-width: 130rem;
     z-index: 2;
 
     transform-origin: center;
