--- a/sass/subHeader/_trailer.scss
+++ b/sass/subHeader/_trailer.scss
@@ -29,7 +29,7 @@
   // Small background
   &__bg-small {
     width: calc(100% - 12rem);
-    max-width: $max-width;
+    max-width: 160rem;
     height: 100%;
     z-index: 1;
     box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.5);
