--- a/sass/utility/_useful.scss
+++ b/sass/utility/_useful.scss
@@ -1,3 +1,4 @@
+// Buttons
 .button {
   border: none;
   outline: none;
@@ -12,4 +13,13 @@
   &:hover {
     background-color: $button-color-blue-hover;
   }
+}
+
+// Icons
+.arrow-down {
+  width: 1.5rem;
+  height: 1.5rem;
+  fill: $arrow-color;
+  margin-left: 0.2rem;
+  transition: all linear 0.2s;
 }
